--- a/package.json
+++ b/package.json
@@ -31,14 +31,17 @@
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "expoapp": "file:",
+    "glob": "^11.0.1",
     "nativewind": "^4.1.23",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-appwrite": "^0.7.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.4.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "styled-components": "^6.1.17"
